egonlang-core/res/examples/invalid/assign_expr_with_type_identifier.eg
a: Number = 456;

// out: SyntaxError: unexpected ":"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]